Got rid of extra space. Fixed #485

--- a/app/assets/stylesheets/profile.less
+++ b/app/assets/stylesheets/profile.less
@@ -355,10 +355,6 @@ ul.profile-user-social-buttons li a:hover {
   margin: 30px auto;
 }
 
-.profile-input-row {
-  height: 65px !important;
-}
-
 .profile-input-row .success {
   color: #65bc25;
 }
